# tex

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BLIND_SPOT_REGISTER.md  BLUEPRINT_APPLIED.txt  BRIEF.md  CAPABILITY_TIERS.md  CHALLENGE.md  CLAIMS_ASPIRATIONAL.md  CLAIMS_CURRENT.md  CLAIMS_HISTORY.md  CLAUDE.md  COORDINATION.md  CORRECTIONS_NEEDED.md  DEPLOYMENT.md  DISCOVERY_BUILD_LOG.md  DISCOVERY_DOCTRINE.md  DISCOVERY_LAYER_INTEGRATION_NOTES.md  Dockerfile  ECOSYSTEM_BUYER_NARRATIVES.md  ECOSYSTEM_GOVERNANCE.md  FRONTIER_COMPLIANCE.md  FRONTIER_GTM.md  FRONTIER_KNOWN_BYPASSES.md  FRONTIER_ROADMAP.md  FRONTIER_THREAT_MODEL.md  INTEGRATIONS.md  INTEGRATION_NOTES 2.md  KNOWN_BUGS.md  LAYERS.md  LAYER_4_STATUS.md  MEMORY.md  MODULES.md  Makefile  NAVIGATION.md  NOTES.md  README.md  REPRODUCE.md  ROADMAP.md  (+34 more)
.claude/: settings.json
anchors/: PUBLISHED_TREE_HEADS.jsonl  README.md  checkpoint_anchors.jsonl
audit/: 00_INDEX.md  EXECUTIVE_SUMMARY.md
audit_tools/: assemble.py  capabilities.py  cleanup.sh  diagrams.py  inventory.py  runtime_surface.py  selfaudit.py  strip_claims.py  wiring.py
calibration/: RESEARCH.md
cpsa_models/: tex_cosign_v2.scm  tex_cosign_v2_shapes.json
deploy/: DURABILITY.md
diagrams/: decision_path_sequence.dot  layer_architecture.dot  package_dependency.dot  package_dependency_full_module.dot  runtime_topology.dot
docs/: BEHAVIORAL_PROVENANCE.md  ecosystem.md
examples/: demo_thread_9_twin.sh
forge/: PUBKEY_STATEMENT.ecdsa.json  PUBKEY_STATEMENT.json  README.md  canonical_bundle.ecdsa.jsonl  canonical_bundle.pq.jsonl
scripts/: _audit_data.json  anchor_checkpoint.py  anchor_demo.py  arm_forge_challenge.py  audit.py  capstone_demo.py  ci_adaptive_gate.example.yml  demo_tee.sh  demo_thread4.sh  demo_thread4_5.sh  demo_thread_1.sh  demo_thread_10.py  demo_thread_10_extended.py  demo_thread_13.sh  demo_thread_13_1.sh  demo_thread_14_zkprov.sh  demo_thread_15_nanozk.sh  demo_thread_2.py  demo_thread_3_attribution.sh  demo_thread_5_c2pa.sh  demo_thread_6_durable.sh  demo_thread_7_eightaxis.sh  demo_thread_8_intervention.sh  frontier_thread_12_demo.sh  honest_decline_demo.py  layers.py  provision_kokoro.sh  provision_whisper.sh  quickstart.py  repair_discovery_ledger.py  repair_governance_snapshots.py  replay_trial_demo.py  run_adversarial.py  smoke_guardrail.py  verify_conduit_receipt.py  verify_enforcement_receipt.py  verify_it_yourself.py
sdks/python/: README.md  pyproject.toml
sdks/python/tex_guardrail/: __init__.py  client.py  decorator.py
sdks/python/tex_guardrail/integrations/: __init__.py  langchain.py
sim_cockpit/: index.html
tests/: conftest.py  discovery_coverage_harness.py  test_abstention_certificate.py  test_action_cadence.py  test_action_class.py  test_agent_governance.py  test_alert_engine.py  test_april_2026_fixes.py  test_asi_expansion.py  (+117 more)
tests 2/: conftest.py  test_agent_governance.py  test_api.py  test_bug2_systemic_flag_regression.py  test_c2pa_emission_wired.py  test_connector_health.py  test_crc_gate.py  test_discovery_connectors.py  test_discovery_root_upgrades.py  test_discovery_routes.py  test_discovery_slack_connector.py  test_enforcement_consolidation.py  test_evidence_seal_wiring.py  test_integration_layer.py  test_multi_tenant_enforcement.py  test_outcome_trust.py  test_outcome_validator.py  test_pdp_crc_path_integration.py  test_postgres_registry.py  test_presence.py  test_router.py  test_scan_runs.py  test_semantic.py  test_specialists.py  test_structural_floor.py  test_twin_endpoint_wired.py  test_warden_unbeatable.py
(+1567 files in other folders)
