[project]
name = "tex"
version = "0.1.0"
description = "Tex — AI agent governance and evidence platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "openai>=1.40.0",
    "cryptography>=42",
    "networkx>=3.2",
    # Algorithm-agile signing context binding (arxiv 2605.06788)
    # uses BLAKE3-XOF. ML-DSA dispatch uses BLAKE3 for context binding.
    "blake3>=0.4.1",
    # DER encoding for composite signatures (draft-ietf-lamps-pq-composite-sigs-18,
    # April 2026) and X.509 / CMS shapes.
    "pyasn1>=0.6.0",
    "pyasn1_modules>=0.4.0",
    # Numerical primitives for the systemic-risk evaluator
    # (digital twin trajectory simulation, conformal calibration,
    # SCCAL drift bands, Koopman operator approximation).
    "numpy>=1.26",
]

[project.optional-dependencies]
# Postgres backends for the durable stores
# (tex.stores.*_postgres + tex.db.leaderboard_repo). Runtime falls back
# to in-memory mode when DATABASE_URL is unset, so these are optional.
postgres = [
    "psycopg[binary]>=3.1.0",
    "asyncpg>=0.29.0",
]
# Zero-knowledge stack (NANOZK, ZKPROV). BN254 Poseidon merkle hashing.
#
# Carried as an extra because `poseidon-hash` 0.1.4 declares
# `pytest~=7.1.2` as a runtime dependency, which conflicts with Tex's
# dev dep on `pytest>=8.2.0`. Until upstream releases >0.1.4 with that
# fixed, users who need real Poseidon hashing (ZK-friendly proofs)
# install with `pip install -e ".[zk]" --no-deps poseidon-hash` or use
# the SHA-256 fallback baked into `tex.zkprov.commitment` and
# `tex.nanozk.poseidon_chain`.
zk = [
    "poseidon-hash>=0.1.4",
]
# Optional liboqs fallback for ML-DSA / ML-KEM when running on
# cryptography < 48 / OpenSSL < 3.5. Native pyca is preferred.
liboqs = [
    "oqs>=0.10",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
# Convenience: pull everything that's typically wanted in production.
all = [
    "tex[postgres]",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tex*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
